Moving more br tags usage into CSS Removing commented out code

--- a/theme/templates/accounts/sign_up_form.html
+++ b/theme/templates/accounts/sign_up_form.html
@@ -48,9 +48,8 @@
     <div class="row">
       <script src='https://www.google.com/recaptcha/api.js'></script>
       <div class="g-recaptcha" data-sitekey={{ sitekey }}></div>
-        <div id="missing-data-div"></div>
-        <br>
-        <input class="btn btn-primary" type="button" id="signup" value="Join HydroShare & start collaborating">
+        <div id="missing-data-div" class="space-bottom"></div>
+        <input class="btn btn-primary space-top" type="button" id="signup" value="Join HydroShare & start collaborating">
     </div>
 </form>
 
