--- a/theme/templates/includes/author-preview.html
+++ b/theme/templates/includes/author-preview.html
@@ -7,7 +7,7 @@
                 <h4 class="modal-title">Author</h4>
             </div>
             <div class="modal-body">
-                <table class="table" style="border: 1px solid #DDD;">
+                <table class="table border-gray">
                     <tbody>
                         <tr>
                             <td class="text-center"><i class="fa fa-user" aria-hidden="true"></i></td>
