--- a/theme/templates/accounts/account_login.html
+++ b/theme/templates/accounts/account_login.html
@@ -20,7 +20,7 @@
             <h2 class="page-title">Sign In</h2>
         </div>
         <div class="col-xs-12 col-sm-6">
-            <form class="account-form" method="post"{% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>
+            <form class="account-form space-bottom" method="post"{% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>
                 {% csrf_token %}
 
                 {% if form.non_field_errors %}
@@ -59,7 +59,7 @@
                 </fieldset>
             </form>
 
-            <p>{% blocktrans with request.GET.next as next %}<br>If you don't have an account you can <a href="/sign-up/?next={{ next }}">join HydroShare</a> now.{% endblocktrans %}</p>
+            <p>{% blocktrans with request.GET.next as next %}If you don't have an account you can <a href="/sign-up/?next={{ next }}">join HydroShare</a> now.{% endblocktrans %}</p>
             {% url "mezzanine_password_reset" as password_reset_url %}
             {% url "profile_update" as profile_update_url %}
             {% blocktrans %}<p>You can also <a href="{{ password_reset_url }}?next={{ profile_update_url }}">reset your password</a> if you've forgotten it.</p>{% endblocktrans %}</p>
