--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -9,88 +9,83 @@
                     {% if spatial_coverage.projection %}
                         <div>
                             <i class="fa fa-globe" aria-hidden="true"></i>
-                            <small> Coordinate System/Geographic Projection: </small>
+                            <small> Coordinate System/Geographic Projection:</small>
                         </div>
-                        <div>{{ spatial_coverage.projection }}</div>
-                        <br>
+                        <div class="space-bottom">{{ spatial_coverage.projection }}</div>
                     {% endif %}
                     {% if spatial_coverage.units %}
                         <div>
                             <i class="fa fa-tachometer" aria-hidden="true"></i>
                             <small> Coordinate Units: </small>
                         </div>
-                        <div>{{ spatial_coverage.units }}</div>
-                        <br>
+                        <div class="space-bottom">{{ spatial_coverage.units }}</div>
                     {% endif %}
-                    <div>
+                    <div class="space-bottom">
                         {% if spatial_coverage.name %}
                             <div>
                                 <small>Place/Area Name: </small>
                                 <span>{{ spatial_coverage.name }}</span>
                             </div>
-                            <br>
                         {% endif %}
                     </div>
-
-                            {% if spatial_coverage.north is not None or spatial_coverage.northlimit is not None %}
-                                <div class="row coordinates-list-container">
-                                    {% if spatial_coverage.type == 'point' %}
-                                        {% if spatial_coverage.east is not None %}
-                                            <div class="col-xs-12 col-sm-6"><strong>Longitude</strong>
-                                                <div id="cov_east">{{ spatial_coverage.east|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                        {% if spatial_coverage.north is not None %}
-                                            <div class="col-xs-12 col-sm-6"><strong>Latitude</strong>
-                                                <div id="cov_north">{{ spatial_coverage.north|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                    {% else %}
-                                        {% if spatial_coverage.northlimit is not None %}
-                                            <div class="col-xs-12 col-sm-6"><strong>North Latitude</strong>
-                                                <div id="cov_northlimit">{{ spatial_coverage.northlimit|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                        {% if spatial_coverage.eastlimit is not None %}
-                                            <div class="col-xs-12 col-sm-6"><strong>East Longitude</strong>
-                                                <div id="cov_eastlimit">{{ spatial_coverage.eastlimit|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                        {% if spatial_coverage.southlimit is not None %}
-                                            <div class="col-xs-12 col-sm-6"><strong>South Latitude</strong>
-                                                <div id="cov_southlimit">{{ spatial_coverage.southlimit|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                        {% if spatial_coverage.westlimit is not None %}
-                                            <div class="col-xs-12 col-sm-6"><strong>West Longitude</strong>
-                                                <div id="cov_westlimit">{{ spatial_coverage.westlimit|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                    {% endif %}
-                                </div>
+                    {% if spatial_coverage.north is not None or spatial_coverage.northlimit is not None %}
+                        <div class="row coordinates-list-container">
+                            {% if spatial_coverage.type == 'point' %}
+                                {% if spatial_coverage.east is not None %}
+                                    <div class="col-xs-12 col-sm-6"><strong>Longitude</strong>
+                                        <div id="cov_east">{{ spatial_coverage.east|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                                {% if spatial_coverage.north is not None %}
+                                    <div class="col-xs-12 col-sm-6"><strong>Latitude</strong>
+                                        <div id="cov_north">{{ spatial_coverage.north|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                            {% else %}
+                                {% if spatial_coverage.northlimit is not None %}
+                                    <div class="col-xs-12 col-sm-6"><strong>North Latitude</strong>
+                                        <div id="cov_northlimit">{{ spatial_coverage.northlimit|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                                {% if spatial_coverage.eastlimit is not None %}
+                                    <div class="col-xs-12 col-sm-6"><strong>East Longitude</strong>
+                                        <div id="cov_eastlimit">{{ spatial_coverage.eastlimit|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                                {% if spatial_coverage.southlimit is not None %}
+                                    <div class="col-xs-12 col-sm-6"><strong>South Latitude</strong>
+                                        <div id="cov_southlimit">{{ spatial_coverage.southlimit|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                                {% if spatial_coverage.westlimit is not None %}
+                                    <div class="col-xs-12 col-sm-6"><strong>West Longitude</strong>
+                                        <div id="cov_westlimit">{{ spatial_coverage.westlimit|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
                             {% endif %}
-                        {% endif %}
+                        </div>
+                    {% endif %}
+                {% endif %}
 
-                        {% if temporal_coverage %}
-                            <br>
-                            <h4>Temporal</h4>
-                            <table class="info-table">
-                                <tbody>
-                                <tr>
-                                    <th><i class="fa fa-calendar" aria-hidden="true"></i> <strong>Start Date:</strong></th>
-                                    <td><span class="format-date"
-                                                data-date="{{ temporal_coverage.start_date }}"></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th><i class="fa fa-calendar" aria-hidden="true"></i> <strong>End Date:</strong></th>
-                                    <td><span class="format-date"
-                                                data-date="{{ temporal_coverage.end_date }}"></span></td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        {% endif %}
-                    </div>
+                {% if temporal_coverage %}
+                    <h4 class="space-top">Temporal</h4>
+                    <table class="info-table">
+                        <tbody>
+                        <tr>
+                            <th><i class="fa fa-calendar" aria-hidden="true"></i> <strong>Start Date:</strong></th>
+                            <td><span class="format-date"
+                                        data-date="{{ temporal_coverage.start_date }}"></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th><i class="fa fa-calendar" aria-hidden="true"></i> <strong>End Date:</strong></th>
+                            <td><span class="format-date"
+                                        data-date="{{ temporal_coverage.end_date }}"></span></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                {% endif %}
+            </div>
 
             {% if spatial_coverage %}
                 <div class="col-xs-12 col-sm-8">
@@ -142,8 +137,7 @@
                                    type="text" value="{% if coverage_spatial_form.initial.units %}{{ coverage_spatial_form.initial.units }}{% endif %}">
                         </div>
 
-                        <br>
-                        <div class="col-xs-12">
+                        <div class="col-xs-12 space-top">
                             <div class="row">
                                 <div class="col-xs-4 col-md-2">
                                     <h4>Spatial:</h4>
@@ -154,7 +148,6 @@
                                     </a>
                                 </div>
                             </div>
-
                         </div>
 
                         <fieldset>
@@ -170,18 +163,27 @@
                                 </div>
 
                                 {% if spatial_coverage.projection %}
-                                    <small class="text-muted">
-                                        <div><i class="fa fa-globe" aria-hidden="true"></i> Coordinate System/Geographic Projection:</div>
-                                        <div><strong>{{ spatial_coverage.projection }}</strong></div>
-                                    </small>
-                                    <br>
+                                    <div class="space-bottom">
+                                        <small class="text-muted">
+                                            <div>
+                                                <i class="fa fa-globe" aria-hidden="true"></i> Coordinate
+                                                System/Geographic Projection:
+                                            </div>
+                                            <div>
+                                                <strong>{{ spatial_coverage.projection }}</strong>
+                                            </div>
+                                        </small>
+                                    </div>
                                 {% endif %}
+
                                 {% if spatial_coverage.units %}
-                                    <small class="text-muted">
-                                        <div><i class="fa fa-tachometer" aria-hidden="true"></i> Coordinate Units:</div>
-                                        <div><strong>{{ spatial_coverage.units }}</strong></div>
-                                    </small>
-                                    <br>
+                                    <div class="space-bottom">
+                                        <small class="text-muted space-bottom">
+                                            <div><i class="fa fa-tachometer" aria-hidden="true"></i> Coordinate Units:
+                                            </div>
+                                            <div><strong>{{ spatial_coverage.units }}</strong></div>
+                                        </small>
+                                    </div>
                                 {% endif %}
 
                                 <div id="div_id_north" class="control-group space-top">
@@ -249,7 +251,7 @@
                                               class="input-group-addon">°</span>
                                     </div>
                                 </div>
-                                <br>
+
                                 {# we will show/hide this button from JS code when ever coverage element gets updated for aggregation #}
                                 <button id="btn-update-resource-spatial-coverage"
                                         type="button" class="btn btn-info"
@@ -278,8 +280,7 @@
 
                                 <div id="coverageMap"></div>
 
-                                <br>
-                                <button type="button" class="btn btn-primary pull-right btn-form-submit"
+                                <button type="button" class="btn btn-primary pull-right btn-form-submit space-top"
                                         style="display: none;">Save changes
                                 </button>
                             </div>
@@ -288,8 +289,7 @@
                 </form>
             </div>
             <div class="col-xs-12">
-                <br>
-                <div class="row">
+                <div class="row space-top">
                     <div class="col-xs-4 col-md-2">
                         <h4>Temporal:</h4></div>
                     <div class="col-xs-8 col-md-10">
