Removing "data/contents" from UI path string

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -635,9 +635,10 @@
                                                 <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
                                                 <small class="uploading-message">
                                                     <strong>Uploading files to:</strong>&nbsp;
-                                                    <span id="upload-folder-path"></span>
+                                                    <span id="root-path">contents</span><span id="upload-folder-path"></span>
                                                     <strong>&nbsp;&nbsp;Progress:&nbsp;</strong>
-                                                    <span id="upload-progress"></span></small>
+                                                    <span id="upload-progress"></span>
+                                                </small>
                                             </div>
 
                                             <div class="fb-drag-flag">
