--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -197,7 +197,7 @@
                                     </div>
                                 </div>
 
-                                <div id="div_id_east" class="control-group space-bottom">
+                                <div id="div_id_east" class="control-group space-top">
                                     <div class="input-group">
                                         <span class="input-group-addon coordinates-label-addon">Longitude</span>
                                         <input type="number" class="form-control" placeholder="-180 to 180"
