--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -268,6 +268,10 @@
                                 <span class="fa fa-external-link icon-blue"></span>
                                 <span>Add content from the web</span>
                             </li>
+                            <li data-menu-name="paste" data-fb-action="paste">
+                                <span class="fa fa-clipboard icon-blue"></span>
+                                <span>Paste</span>
+                            </li>
                             <li role="separator" class="divider"></li>
                         {% endif %}
                     {% endif %}
