Move content from web warning to alerts section on top of file browser. Minor style adjustments

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -333,6 +333,20 @@
                             </div>
                         </div>
                     {% endif %}
+                    <div id="ref_file_note" class="alert alert-warning space-top" role="alert"
+                            {% if not show_web_reference_note %} hidden {% endif %}>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                        <div class="flex">
+                            <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
+                            <em>
+                                This resource contains links to external content. Linked content is
+                                NOT stored in HydroShare, and we can't guarantee its availability, quality, or
+                                security.
+                            </em>
+                        </div>
+                    </div>
                     {% if page.perms.change and resource_edit_mode %}
                         {% if file_type_error %}
                             <div class="alert alert-danger alert-dismissible" role="alert">
@@ -702,11 +716,6 @@
                                         <input type="hidden" name="file_ids" value=""/>
                                     </form>
                                 {% endif %}
-                            </div>
-                            <div id="ref_file_note" class="text-muted division-title-caption"
-                                    {% if not show_web_reference_note %} hidden {% endif %}>
-                            Please note: This resource contains links to external content. Linked content is NOT stored in
-                            HydroShare, and we can't guarantee its availability, quality, or security.
                             </div>
                         </div>
 
