--- a/theme/templates/resource-landing-page/credits.html
+++ b/theme/templates/resource-landing-page/credits.html
@@ -40,7 +40,7 @@
         <div class="col-xs-12 content-block">
             <h4>Contributors</h4>
             <div>
-                <span class="division-title-caption">People or
+                <span>People or
                     organizations that contributed technically, materially,
                     financially, or provided general support for the
                     creation of the resource's content but are not
