Consolidate repeated code into function

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -550,7 +550,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="create-folder">Add content from the web</h4>
+                    <h4 class="modal-title" id="create-folder">Add Content From The Web</h4>
                 </div>
 
                 <div class="modal-body">
@@ -574,7 +574,8 @@
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" id="btn-add-reference-url" class="btn btn-primary disabled" data-dismiss="modal">Save
+                    <button type="button" id="btn-add-reference-url" class="btn btn-primary disable-after disabled"
+                            data-dismiss="modal">Add Content
                     </button>
                 </div>
             </div>
