--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -574,7 +574,7 @@
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" id="btn-add-reference-url" class="btn btn-primary disable-after disabled"
+                    <button type="button" id="btn-add-reference-url" class="btn btn-primary btn-disable-after disabled"
                             data-dismiss="modal">Add Content
                     </button>
                 </div>
