Update readme learn more link

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -307,7 +307,7 @@
                                     If you upload a readme.txt or readme.md file at the root level in your
                                     resource, it will be rendered automatically on the page. Markdown
                                     formatting is allowed in readme.md.<br><strong><a
-                                        href="https://guides.github.com/features/mastering-markdown/#syntax"
+                                        href="https://daringfireball.net/projects/markdown/basics"
                                         target="_blank">Learn more about Markdown</a></strong>
                                 </em>
                             </div>
